# oneoff-cli

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/oneoff/: oneoff.py
src/oneoff/utils/: aws.py  cli.py  infra.yaml
src/oneoff/utils/cloudformation/: template.yaml
src/oneoff/utils/default_container/: Dockerfile
src/oneoff_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
