[metadata]
name = oneoff-cli
version = 1.0
description = CLI tool for managing AWS ECS tasks
author = Niklas palm
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
install_requires =
    Click
    boto3
    docker
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oneoff = oneoff.oneoff:cli
